--- a/homework/lesson.9/index.html
+++ b/homework/lesson.9/index.html
@@ -9,7 +9,7 @@
 
   <div class="file-system"></div>
 
-  <script src="answer.js"></script>
+  <script src="answer1.js"></script>
 
 </body>
 </html>
