--- a/homework/pizza_app/index.html
+++ b/homework/pizza_app/index.html
@@ -19,7 +19,7 @@
               <!-- Pizza -->
               <li class="pizza-item">
                 <span class="num">1</span>
-                <img src="" width="300" height="300" />
+                <img src="images/pizza.svg" width="300" height="300" />
                 <ul></ul>
               </li>
               <!-- /Pizza -->
