--- a/homework/pizza_app/index.html
+++ b/homework/pizza_app/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="ingredients-selector">
-        <ul>
+        <ul class="ingredients-list">
 
           <!-- Ingredient selector -->
           <li>
