--- a/homework/pizza_app/index - копия.html
+++ b/homework/pizza_app/index - копия.html
@@ -18,7 +18,7 @@
 
               <!-- Pizza -->
               <li class="pizza-item">
-                <span class="pizza-index">1</span>
+                <span class="num">1</span>
                 <img src="images/pizza.svg" width="300" height="300" />
                 <ul></ul>
               </li>
@@ -28,7 +28,7 @@
           </div>
         </div>
         <button class="add-pizza">add pizza</button>
-        <h3>total pizza's count: <strong class="num">1</strong></h3>
+        <span class="num">1</span>
       </div>
 
       <div class="ingredients-selector">
