--- a/homework/pizza_app/index.html
+++ b/homework/pizza_app/index.html
@@ -33,11 +33,8 @@
 
       <div class="ingredients-selector">
         <ul class="ingredients-list">
-
           <!-- Ingredient selector -->
-
           <!-- /Ingredient selector -->
-
         </ul>
       </div>
 
@@ -68,6 +65,13 @@
         <!-- /Order row -->
 
       </tbody>
+      <tfoot>
+      <tr>
+        <td><strong class="sum-text">sum:</strong></td>
+        <td></td>
+        <td><span class="sum-price" data-sum="0"></span><span></span></td>
+      </tr>
+      </tfoot>
     </table>
 
   </div>
