add igradients render, add ingradients in table

--- a/homework/pizza_app/index.html
+++ b/homework/pizza_app/index.html
@@ -20,7 +20,6 @@
               <li class="pizza-item">
                 <span class="pizza-index">1</span>
                 <img src="images/pizza.svg" width="300" height="300" />
-                <ul></ul>
               </li>
               <!-- /Pizza -->
 
@@ -56,7 +55,38 @@
           <td class="pizza-num">
             <button class="select-num">1</button>
           </td>
-          <td class="ingredients"></td>
+          <td class="ingredients">
+            <div class="ingredients-item salami">
+              <span class="name">Salami <img src="images/salami.svg" alt=""></span>
+              <button class="plus">+</button>
+              <input type='number' class="input">
+              <button class="minus">-</button>
+            </div>
+            <div class="ingredients-item tomato">
+              <span class="name">tomato <img src="images/tomato.svg" alt=""></span>
+              <button class="plus">+</button>
+              <input type='number' class="input">
+              <button class="minus">-</button>
+            </div>
+            <div class="ingredients-item bacon">
+              <span class="name">bacon <img src="images/bacon.svg" alt=""></span>
+              <button class="plus">+</button>
+              <input type='number' class="input">
+              <button class="minus">-</button>
+            </div>
+            <div class="ingredients-item cheeze">
+              <span class="name">cheeze <img src="images/cheeze.svg" alt=""></span>
+              <button class="plus">+</button>
+              <input type='number' class="input">
+              <button class="minus">-</button>
+            </div>
+            <div class="ingredients-item green">
+              <span class="name">green <img src="images/green.svg" alt=""></span>
+              <button class="plus">+</button>
+              <input type='number' class="input">
+              <button class="minus">-</button>
+            </div>
+          </td>
           <td class="total" data-price = "40">40</td>
           <td>
             <button class="remove">&times;</button>
